--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "Gymmed\\SvgParser\\": "src/"
+            "GymMed\\SvgParser\\": "src/"
         }
     },
     "authors": [
